# legipy

./: setup.cfg
.github/workflows/: tests.yml
legipy/: cli.py  common.py
legipy/parsers/: code_parser.py  common_law_list_parser.py  law_parser.py  legislature_list_parser.py  pending_law_list_parser.py  published_law_list_parser.py
legipy/services/: __init__.py  code_service.py  law_service.py  legislature_service.py  selenium.py  session.py
tests/: test_code_service.py  test_law_service.py
