[metadata]
name = legipy
version = attr: legipy.version.__version__
description = Python client for legifrance.gouv.fr website
keywords = scraping, politics, data, france
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/regardscitoyens/legipy
author = Regards Citoyens
author_email = contact@regardscitoyens.org
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: Implementation :: PyPy

python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*

[options]
include_package_data = True
packages = find:
install_requires =
	beautifulsoup4 >= 4.6
	click >= 6.7
	html5lib >= 1.0
	requests >= 2.20
	urllib3[secure] >= 1.24
	six >= 1.11
	requests-cache >= 0.5.2

[options.extras_require]
test =
	coverage >= 4.4
	pytest >= 3.4
	pytest-cov >= 2.5
	vcrpy >= 1.11
lint =
	flake8 >= 3.5
	flake8-docstrings >= 1.5.0

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
	legipy = legipy.__main__:cli

[tool:pytest]
addopts = --cov=legipy


[tox:tox]
envlist = py2.7, py3.4, py3.5, py3.6, py3.7, py3.8, py3.9, pypy2.7, pypy3.5, flake8

[testenv]
commands = pytest
extras = test

[testenv:flake8]
commands = flake8 legipy
extras = lint
